# pmount

./: .clang-format  .gitignore  AUTHORS  CHANGES  ChangeLog  Doxyfile  GPL  Makefile  Makefile.am  Makefile.in  README  README.devel  README.md  TODO  aclocal.m4  autogen.sh  config.h.in  configure  configure.ac  configure.in  fs.c  fs.h  luks.c  luks.h  meson.build  meson_options.txt  pmount-hal  pmount-hal.1  pmount-hal.c  pmount.1  pmount.c  policy.c  policy.h  pumount.1  pumount.c  utils.c  utils.h
completions/: pmount.bash
completions/bash/: pmount  pumount
etc/: Makefile.am  Makefile.in  pmount.conf
man/: Makefile.am  Makefile.in  meson.build  pmount-hal.1  pmount.1  pmount.1.in  pmount.conf.5  pumount.1  pumount.1.in
po/: LINGUAS  POTFILES  POTFILES.in  af.po  bs.po  ca.po  cs.po  da.po  de.po  de_AT.po  de_DE.po  el.po  en.po  en_AU.po  en_GB.po  es.po  es_ES.po  et.po  eu.po  fa.po  fr.po  fr_FR.po  he.po  hr.po  hu.po  id.po  it.po  it_IT.po  ja.po  ko.po  meson.build  ml.po  nb.po  nds.po  nl.po  no.po  oc.po  pa.po  pl.po  pmount.pot  (+16 more)
src/: ChangeLog  Makefile.am  Makefile.in  conf.c  conf.h  conffile.c  conffile.h  configuration.c  configuration.h  fs.c  fs.h  loop.c  loop.h  luks.c  luks.h  meson.build  pmount-hal.c  pmount.c  policy.c  policy.h  pumount.c  realpath.c  shared.c  shared.h  utils.c  utils.h  version.c.in
tests/: Makefile.am  Makefile.in  README  hal-umount-python  hal-umount-shell  meson.build  parse_cf  parse_cf.c  parse_cf.conf  test_parse_cf.c  test_policy.c  test_policy.sh  test_policy.sh.in  test_spawn.c  test_sysfs.c
tests/check_fstab/: d  fstab
